--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "hardhat test solidity test/solidity/Test.t.sol"
   },
   "devDependencies": {
-    "hardhat": "^3.0.0",
-    "forge-std": "github:foundry-rs/forge-std#v1.9.4"
+    "@openzeppelin/contracts": "^5.4.0",
+    "@openzeppelin/contracts-upgradeable": "^5.4.0",
+    "@openzeppelin/foundry-upgrades": "^0.4.0",
+    "forge-std": "github:foundry-rs/forge-std#v1.9.4",
+    "hardhat": "3.0.14"
   }
 }
-
