--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "@openzeppelin/contracts-upgradeable": "^5.4.0",
-    "@openzeppelin/foundry-upgrades": "^0.4.0",
-    "forge-std": "github:foundry-rs/forge-std#v1.9.4",
+    "forge-std": "github:foundry-rs/forge-std",
     "hardhat": "3.0.14"
+  },
+  "dependencies": {
+    "@openzeppelin/foundry-upgrades": "^0.4.0"
   }
 }
